--- a/app/src/main/res/layout/barcode_capture.xml
+++ b/app/src/main/res/layout/barcode_capture.xml
@@ -9,16 +9,16 @@
     android:gravity="center"
     android:keepScreenOn="true">
 
-  <it.museomobile.ui.camera.CameraSourcePreview
+  <uniba.it.mobilemuseo.ui.camera.CameraSourcePreview
       android:id="@+id/preview"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
 
-    <it.museomobile.ui.camera.GraphicOverlay
+    <uniba.it.mobilemuseo.ui.camera.GraphicOverlay
         android:id="@+id/graphicOverlay"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-  </it.museomobile.ui.camera.CameraSourcePreview>
+  </uniba.it.mobilemuseo.ui.camera.CameraSourcePreview>
 
 </LinearLayout>
